Update footer, add dist js

--- a/build.html
+++ b/build.html
@@ -27,6 +27,7 @@
 
     <!-- build:js js/main.js -->
     <!-- bower:js -->
+    <script src="js/main.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
